Bug 176590 - "Send again" a message does not include a previously attached Bcc
Summary: "Send again" a message does not include a previously attached Bcc
Status: RESOLVED FIXED
Alias: None
Product: kmail
Classification: Unmaintained
Component: composer (other bugs)
Version First Reported In: 1.10.3
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
: 181803 (view as bug list)
Depends on:
Blocks:
 
Reported: 2008-12-01 00:01 UTC by Ian Hubbertz
Modified: 2009-09-09 20:25 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ian Hubbertz 2008-12-01 00:01:05 UTC
The bug was closed as duplicate, but is not exactly the same as the duplicate one.

The problem still exist in 1.10.3: "Send again" or "Reply to all" in a local "sent message" folder will not copy the BCC list.

---------------
+++ This bug was initially created as a clone of Bug #163723 +++

Version:           1.9.51 (using Devel)
Installed from:    Compiled sources
Compiler:          gcc 4.3 
OS:                Linux

If I create a KMail message with a Bcc, this Bcc is not included on "Send again" on the same message later from the Sent messages folder, even if Bcc remained in the local header.
Comment 1 Jaime Torres 2008-12-01 17:48:10 UTC
While I think "Reply to All" should not copy the BCC addresses, "Send Again" should, and it does not in svn trunk r888112.
Comment 2 Jaime Torres 2009-02-02 15:44:01 UTC
*** Bug 181803 has been marked as a duplicate of this bug. ***
Comment 3 Torgny Nyblom 2009-09-09 20:25:24 UTC
SVN commit 1021657 by tnyblom:

Restore the original bcc field when resending (send again).

BUG: 176590


 M  +3 -0      kmcommands.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1021657