Restore the original bcc field when resending (send again).

BUG: 176590

svn path=/trunk/KDE/kdepim/; revision=1021657